added sub applications

--- a/order/templates/admin/order_date_view.html
+++ b/order/templates/admin/order_date_view.html
@@ -25,7 +25,7 @@
     <tbody>
       {% for d in week_data %}
       <tr>
-        <td>{{ d.fcuser }}</td>
+        <td>{{ d.user }}</td>
         <td>{{ d.product }}</td>
         <td>{{ d.status }}</td>
         <td>{{ d.register_date }}</td>
@@ -47,7 +47,7 @@
     <tbody>
       {% for d in data %}
       <tr>
-        <td>{{ d.fcuser }}</td>
+        <td>{{ d.user }}</td>
         <td>{{ d.product }}</td>
         <td>{{ d.status }}</td>
         <td>{{ d.register_date }}</td>
