--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -26,6 +26,7 @@
       {% endif %}
       {% endfor %}
       <button type="submit" class="btn btn-primary">로그인</button>
+      <button type="button" class="btn btn-primary" onclick="location.href='/register'">회원가입</button>
     </form>
   </div>
 </div>
