--- a/user/templates/callback.html
+++ b/user/templates/callback.html
@@ -5,17 +5,26 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
 <body>
+
+
+<div id="userInfo">
+<h1>로그인된 유저 정보입니다.</h1>
+</div>
+
+
 <script type="text/javascript">
-  var naver_id_login = new naver_id_login("YOUR_CLIENT_ID", "YOUR_CALLBACK_URL");
+  var naver_id_login = new naver_id_login("WO73y3DTPypJ9B7qq56N", "http://localhost:8000/login/social/naver/callback/");
   // 접근 토큰 값 출력
-  alert(naver_id_login.oauthParams.access_token);
+//   alert(naver_id_login.oauthParams.access_token);
   // 네이버 사용자 프로필 조회
   naver_id_login.get_naver_userprofile("naverSignInCallback()");
   // 네이버 사용자 프로필 조회 이후 프로필 정보를 처리할 callback function
   function naverSignInCallback() {
-    alert(naver_id_login.getProfileData('email'));
-    alert(naver_id_login.getProfileData('nickname'));
-    alert(naver_id_login.getProfileData('age'));
+      $('#userInfo').append(naver_id_login.getProfileData('email'))
+      $('#userInfo').append(naver_id_login.getProfileData('nickname'))
+      $('#userInfo').append(naver_id_login.getProfileData('age'))
+      $('#userInfo').append(naver_id_login.getProfileData('gender'))
+      $('#userInfo').append(naver_id_login.getProfileData('birthdate'))
   }
 </script>
 </body>
