--- a/user/templates/login_form.html
+++ b/user/templates/login_form.html
@@ -1,23 +1,65 @@
-<!doctype html>
+{% extends "base.html" %}
+<!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="utf-8">
-  <title>네이버 로그인</title>
-  <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <title>소셜 로그인</title>
+    <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  </head>
+
+  <body>
+    {% block contents %}  
+    <div class="row mt-5">
+      <div class="col-12 text-center">
+        <h1>로그인</h1>
+      </div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-12">{{ error }}</div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-12">
+        <form method="POST" action=".">
+          {% csrf_token %} {% for field in form %}
+          <div class="form-group">
+            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+            <input
+              type="{{ field.field.widget.input_type }}"
+              class="form-control"
+              id="{{ field.id_for_label }}"
+              placeholder="{{ field.label }}"
+              name="{{ field.name }}"
+            />
+          </div>
+          {% if field.errors %}
+          <span style="color: red">{{ field.errors }}</span>
+          {% endif %} {% endfor %}
+          <button type="submit" class="btn btn-primary">로그인</button>
+          <button
+            type="button"
+            class="btn btn-primary"
+            onclick="location.href='/register'"
+          >
+            회원가입
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <h1>로그인 화면입니다</h1>
     <div id="naver_id_login"></div>
-  
-    <script type="text/javascript">
-    // var naver_id_login = new naver_id_login("WO73y3DTPypJ9B7qq56N", "http://localhost:8000/login/social/naver/callback/");
-    var naver_id_login = new naver_id_login("WO73y3DTPypJ9B7qq56N", "http://billim.co.kr/login/social/naver/callback/");
-    var state = naver_id_login.getUniqState();
-    naver_id_login.setButton("white", 2,40);
-    // naver_id_login.setDomain("http://localhost:8000");
-    naver_id_login.setDomain("http://billim.co.kr");
-    naver_id_login.setState(state);
-    naver_id_login.setPopup();
-    naver_id_login.init_naver_id_login();
-    </script>
+    <div id="kakao_id_login">
+      <button
+        onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=afa386bd37692148a6c914da561c8458&redirect_uri=http://localhost:8000/login/social/naver/callback/&response_type=code'"
+      >
+        카카오 로그인
+      </button>
+    </div>
+
+    {% load static %}
+    <script src="{% static "js/social_login.js" %}"></script>
+    <script src="/static/js/social_login.js"></script>
+    {% endblock %}
+  </body>
 </html>
