--- a/user/templates/register.html
+++ b/user/templates/register.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% block contents %}
 <div class="row mt-5">
   <div class="col-12 text-center">
@@ -15,17 +14,23 @@
   <div class="col-12">
     <form method="POST" action=".">
       {% csrf_token %}
-      {% for field in form %}
       <div class="form-group">
-        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-        <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}"
-          placeholder="{{ field.label }}" name="{{ field.name }}" />
+        <label for="username">사용자 이름</label>
+        <input type="text" class="form-control" id="username" placeholder="사용자 이름" name="username" />
       </div>
-      {% if field.errors %}
-      <span style="color: red">{{ field.errors }}</span>
-      {% endif %}
-      {% endfor %}
-      <button type="submit" class="btn btn-primary">회원가입</button>
+      <div class="form-group">
+        <label for="email">사용자 이메일</label>
+        <input type="email" class="form-control" id="email" placeholder="사용자 이메일" name="email" />
+      </div>
+      <div class="form-group">
+        <label for="password">비밀번호</label>
+        <input type="password" class="form-control" id="password" placeholder="비밀번호" name="password" />
+      </div>
+      <div class="form-group">
+        <label for="re-password">비밀번호 확인</label>
+        <input type="password" class="form-control" id="re-password" placeholder="비밀번호 확인" name="re-password" />
+      </div>
+      <button type="submit" class="btn btn-primary">등록</button>
     </form>
   </div>
 </div>
