--- a/user/templates/callback.html
+++ b/user/templates/callback.html
@@ -20,8 +20,7 @@
 </div>
 
 <script type="text/javascript">
-//   var naver_id_login = new naver_id_login("WO73y3DTPypJ9B7qq56N", "http://localhost:8000/login/social/naver/callback/");
-  var naver_id_login = new naver_id_login("WO73y3DTPypJ9B7qq56N", "http://billim.co.kr/login/social/naver/callback/");
+  var naver_id_login = new naver_id_login("WO73y3DTPypJ9B7qq56N", "http://localhost:8000/user/callback/naver");
   alert("로그인 되었습니다.");
   // 네이버 사용자 프로필 조회
   naver_id_login.get_naver_userprofile("naverSignInCallback()");
