--- a/user/templates/callback.html
+++ b/user/templates/callback.html
@@ -8,29 +8,25 @@
 
 
 <div id="userInfo">
-  <h1>TEST DATA</h1>
-  <h2>{{test}}</h2>
+  <h1>GET DATA</h1>
+  <h2>{{get}}</h2>  
 
-  <h1>CODE</h1>
-  <h2>{{code}}</h2>
-
-
-  <h1>access_token</h1>
+  <h1>ACCESS TOKEN</h1>
   <h2>{{access_token}}</h2>
 </div>
 
 <script type="text/javascript">
   var naver_id_login = new naver_id_login("WO73y3DTPypJ9B7qq56N", "http://localhost:8000/user/callback/naver");
-  alert("로그인 되었습니다.");
   // 네이버 사용자 프로필 조회
   naver_id_login.get_naver_userprofile("naverSignInCallback()");
   // 네이버 사용자 프로필 조회 이후 프로필 정보를 처리할 callback function
   function naverSignInCallback() {
+      alert(naver_id_login.getProfileData('email'))
       $('#userInfo').append(naver_id_login.getProfileData('email'))
       $('#userInfo').append(naver_id_login.getProfileData('nickname'))
-      $('#userInfo').append(naver_id_login.getProfileData('age'))
-      $('#userInfo').append(naver_id_login.getProfileData('gender'))
-      $('#userInfo').append(naver_id_login.getProfileData('birthdate'))
+      // $('#userInfo').append(naver_id_login.getProfileData('age'))
+      // $('#userInfo').append(naver_id_login.getProfileData('gender'))
+      // $('#userInfo').append(naver_id_login.getProfileData('birthdate'))
   }
 </script>
 </body>
