--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -34,18 +34,12 @@
       {% endfor %}
       <button type="submit" class="btn btn-primary">로그인</button>
     </form>
-    
-    <!-- <button onclick="location.href='https://nid.naver.com/nidlogin.login?oauth_token=dza07Ga34gZRNUyKTq&consumer_key=WO73y3DTPypJ9B7qq56N&logintp=oauth2&nurl=https%3A%2F%2Fnid.naver.com%2Foauth2.0%2Fauthorize%3Fresponse_type%3Dtoken%26state%3D96c16282-c16c-4400-b38e-edb28026b834%26client_id%3DWO73y3DTPypJ9B7qq56N%26redirect_uri%3Dhttp%253A%252F%252Fbillim.co.kr%252Flogin%252Fsocial%252Fnaver%252Fcallback%252F%26locale%3Dko_KR%26inapp_view%3D%26oauth_os%3D&locale=ko_KR&inapp_view=&svctype='"> -->
-    <button onclick="location.href='https://nid.naver.com/nidlogin.login?oauth_token=dza07Ga34gZRNUyKTq&consumer_key=WO73y3DTPypJ9B7qq56N&logintp=oauth2&nurl=https%3A%2F%2Fnid.naver.com%2Foauth2.0%2Fauthorize%3Fresponse_type%3Dtoken%26state%3D96c16282-c16c-4400-b38e-edb28026b834%26client_id%3DWO73y3DTPypJ9B7qq56N%26redirect_uri%3Dhttp%253A%252F%252Flocalhost:5000%252Flogin%252Fsocial%252Fnaver%252Fcallback%252F%26locale%3Dko_KR%26inapp_view%3D%26oauth_os%3D&locale=ko_KR&inapp_view=&svctype='"></button>
-      네이버 로그인 버튼
-    </button>
 
-
-     <!-- 네이버아이디로로그인 버튼 노출 영역 -->
+  <!-- 네이버아이디로로그인 버튼 노출 영역 -->
   <div id="naver_id_login"></div>
   <!-- //네이버아이디로로그인 버튼 노출 영역 -->
   <script type="text/javascript">
-  	var naver_id_login = new naver_id_login("WO73y3DTPypJ9B7qq56N", "http://localhost:8000/user/callback/naver/");
+  	var naver_id_login = new naver_id_login("WO73y3DTPypJ9B7qq56N", "https://localhost:8000/user/callback/login");
   	var state = naver_id_login.getUniqState();
   	naver_id_login.setButton("white", 2,40);
   	naver_id_login.setDomain("https://localhost:8000");
@@ -53,7 +47,10 @@
   	naver_id_login.setPopup();
   	naver_id_login.init_naver_id_login();
   </script>
-      
+
+    <button onclick="location.href='https://nid.naver.com/oauth2.0/authorize?response_type=code&amp;client_id=WO73y3DTPypJ9B7qq56N&amp;redirect_uri=http%3A%2F%2Flocalhost%3A8000%2Fuser%2Fcallback%2Fnaver%2F&amp;state=7a74649e-d714-438f-a3fc-991c8b6f4bc7'">
+      네이버 로그인 버튼
+    </button>
     <button onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=afa386bd37692148a6c914da561c8458&redirect_uri=http://localhost:8000/user/callback/kakao&response_type=code'">
       카카오 로그인 버튼
     </button>
