--- a/user/templates/register.html
+++ b/user/templates/register.html
@@ -12,6 +12,12 @@
 </div>
 <div class="row mt-5">
   <div class="col-12">
+    <button onclick="location.href='https://nid.naver.com/oauth2.0/authorize?response_type=code&client_id={{client_id_naver}}&redirect_uri={{url}}/user/callback/naver/&state=7a74649e-d714-438f-a3fc-991c8b6f4bc7'">
+      네이버로 회원가입
+    </button>
+    <button onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id={{client_id_kakao}}&redirect_uri={{url}}/user/callback/kakao&response_type=code'">
+      카카오로 회원가입
+    </button>
     <form method="POST" action=".">
       {% csrf_token %}
       <div class="form-group">
