--- a/product/templates/product_detail.html
+++ b/product/templates/product_detail.html
@@ -12,17 +12,17 @@
           <form method="POST" action="/order/create/">
             {% csrf_token %}
             {% for field in form %}
-            <div class="form-group">
-              {% ifnotequal field.name 'product' %}
-              <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-              {% endifnotequal %}
-              <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}"
-                placeholder="{{ field.label }}" name="{{ field.name }}"
-                value="{% ifequal field.name 'product' %}{{product.id}}{% endifequal %}" />
-            </div>
-            {% if field.errors %}
-            <span style="color: red">{{ field.errors }}</span>
-            {% endif %}
+              <div class="form-group">
+                {% ifnotequal field.name 'product' %}
+                  <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                {% endifnotequal %}
+                <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}"
+                  placeholder="{{ field.label }}" name="{{ field.name }}"
+                  value="{% ifequal field.name 'product' %}{{product.id}}{% endifequal %}" />
+              </div>
+              {% if field.errors %}
+                <span style="color: red">{{ field.errors }}</span>
+              {% endif %}
             {% endfor %}
             <button type="submit" class="btn btn-primary">주문하기</button>
           </form>
@@ -30,7 +30,10 @@
         <li class="list-group-item">가격: {{ product.price|intcomma }} 원</li>
         <li class="list-group-item">등록날짜: {{ product.register_date|date:'Y-m-d H:i' }}</li>
         <li class="list-group-item">재고: {{ product.stock|intcomma }} 개</li>
-        <li class="list-group-item">{{ product.description|safe }}</li>
+        <li class="list-group-item">{{ product.description|safe }}</li> 
+        <li class="list-group-item">{{ product.image|safe }}</li> 
+        <li class="list-group-item">
+          <img class="fit-picture" src="http://static.billim.co.kr/{{ product.image|safe }}"></li>
       </ul>
     </div>
   </div>
