--- a/product/templates/register_product.html
+++ b/product/templates/register_product.html
@@ -23,7 +23,7 @@
 </div>
 <div class="row mt-5">
   <div class="col-12">
-    <form method="POST" action=".">
+    <form method="POST" action="." enctype="multipart/form-data">
       {% csrf_token %}
       {% for field in form %}
       <div class="form-group">
