--- a/user/templates/register.html
+++ b/user/templates/register.html
@@ -28,25 +28,8 @@
       카카오로 회원가입
     </button>
 
-    <form method="POST" action=".">
+    <form method="POST" action="." enctype="multipart/form-data">
       {% csrf_token %}
-
-      <!-- <div class="form-group"> 
-        <label for="username">사용자 이름</label>
-        <input type="text" class="form-control" id="username" placeholder="사용자 이름" name="username" />
-      </div>
-      <div class="form-group">
-        <label for="email">사용자 이메일</label>
-        <input type="email" class="form-control" id="email" placeholder="사용자 이메일" name="email" />
-      </div>
-      <div class="form-group">
-        <label for="password">비밀번호</label>
-        <input type="password" class="form-control" id="password" placeholder="비밀번호" name="password" />
-      </div>
-      <div class="form-group">
-        <label for="re-password">비밀번호 확인</label>
-        <input type="password" class="form-control" id="re-password" placeholder="비밀번호 확인" name="re-password" />
-      </div> -->
 
       {% for field in form %}
         <div class="form-group">
