--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -4,6 +4,17 @@
 {{ block.super }}
   <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script>
+    if (auth2.isSignedIn.get()) {
+      var profile = auth2.currentUser.get().getBasicProfile();
+      console.log('ID: ' + profile.getId());
+      console.log('Full Name: ' + profile.getName());
+      console.log('Given Name: ' + profile.getGivenName());
+      console.log('Family Name: ' + profile.getFamilyName());
+      console.log('Image URL: ' + profile.getImageUrl());
+      console.log('Email: ' + profile.getEmail());
+    }
+  </script>
 {% endblock %}
 
 {% block contents %}
@@ -12,15 +23,18 @@
 
 {% load socialaccount %} 
 {% providers_media_js %} 
-<h1>소셜 로그인을 해봐요!</h1> 
-<a href = "/accounts/signup">회원가입</a>
-<br> 
+
+
+
+
 {% if user.is_authenticated %} 
   <a href = "/accounts/logout">로그아웃</a> 
-  {{user.username}} 님이 로그인중 
+  <h2>{{user.username}} 님이 로그인중 </h2><br>
+  <h2>{{user}}</h2>
 {% else %} 
-  <a href=" {% provider_login_url 'google' %}">구글 로그인</a>
-  <br> 로그인 하셔야 합니다. 
+  <a href = "/accounts/signup">회원가입 /accounts/signup</a><br>
+  <a href = "/accounts/login">로그인 /accounts/login</a><br> 
+  <a href = "/accounts/google/login">구글 로그인 /accounts/google/login</a><br> 
 {% endif %}
 
 
@@ -60,6 +74,15 @@
     </button>
     <button onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=afa386bd37692148a6c914da561c8458&redirect_uri={{url}}/user/callback/kakao&response_type=code'">
       카카오 로그인 버튼
+    </button>
+    <button onclick="location.href='https://accounts.google.com/o/oauth2/auth/identifier?client_id=1094555666329-b76moi8dkckmoe3vc9kb2qhf60r8t563.apps.googleusercontent.com&redirect_uri=http://localhost:8000/user/callback/google/login&scope=https://www.googleapis.com/auth/userinfo.profile&response_type=code&state=LW3T3VwQn30o&flowName=GeneralOAuthFlow'">
+      구글 로그인 버튼
+    </button>
+    <button onclick="location.href='/user/callback/google'">
+      구글 로그인 버튼2
+    </button>
+    <button onclick="location.href='/user/callback/google123'">
+      구글 로그인 버튼2
     </button>
   </div>
 </div>
