--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -20,7 +20,7 @@
 {% block contents %}
 
 
-
+<!-- 
 {% load socialaccount %} 
 {% providers_media_js %} 
 
@@ -35,7 +35,7 @@
   <a href = "/accounts/signup">회원가입 /accounts/signup</a><br>
   <a href = "/accounts/login">로그인 /accounts/login</a><br> 
   <a href = "/accounts/google/login">구글 로그인 /accounts/google/login</a><br> 
-{% endif %}
+{% endif %} -->
 
 
 
