--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -1,74 +1,88 @@
-{% extends "base.html" %}
+{% extends "base.html" %} 
+{% block contents %} 
 
-{% block extrahead %}
-{{ block.super }}
-  <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script>
-    if (auth2.isSignedIn.get()) {
-      var profile = auth2.currentUser.get().getBasicProfile();
-      console.log('ID: ' + profile.getId());
-      console.log('Full Name: ' + profile.getName());
-      console.log('Given Name: ' + profile.getGivenName());
-      console.log('Family Name: ' + profile.getFamilyName());
-      console.log('Image URL: ' + profile.getImageUrl());
-      console.log('Email: ' + profile.getEmail());
-    }
-  </script>
-{% endblock %}
+{% if user %}
 
-{% block contents %}
+<h1>{{user.social_login}} 으로 가입한 {{user.email}} 님</h1>
+<button class="btn btn-primary btn-block" onclick="location.href='/user/logout'">로그아웃</button>
+<button class="btn btn-primary btn-block" onclick="location.href='/seller/register'">셀러 등록</button>
 
+<div class="row mt-5">
+  <div class="col-12">
+    <table class="table table-light">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">상품명</th>
+          <th scope="col">상품 이미지</th>
+          <th scope="col">가격</th>
+          <th scope="col">등록날짜</th>
+        </tr>
+      </thead>
+      <tbody class="text-dark">
+        {% for product in products %}
+        <tr>
+          <th scope="row">{{ product.id }}</th>
+          <th>
+            <a id="product-{{ product.id }}" href="/product/{{ product.id }}">
+              {{ product.name }}
+            </a>
+          </th>
+          <th><img src="{{ product.image }}" alt="" /></th>
+          <th>{{ product.price }} 원</th>
+          <th>{{ product.register_date|date:'Y-m-d H:i' }}</th>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    <button type="button" class="btn btn-primary" onclick="location.href='product/create'">
+      상품 등록하기
+    </button>
+  </div>
+</div>
 
-<!-- 
-{% load socialaccount %} 
-{% providers_media_js %} 
+<div class="row mt-5">
+  {% if is_paginated %}
+  <ul class="pagination">
+    
+    {% if page_obj.has_previous %}
+    <li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
 
+    {% else %}
+    <li class="disabled"><span>&laquo;</span></li>
 
+    {% endif %} 
 
+    {% for i in paginator.page_range %} 
+      {% if page_obj.number == i%}
+        <li class="active">
+          <span>{{ i }} <span class="sr-only">(current)</span></span>
+        </li>
+      {% else %}
+        <li><a href="?page={{ i }}">{{ i }}</a></li>
+      {% endif %} 
+    {% endfor %} 
+    
+    {% if page_obj.has_next %}
+    <li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
+    {% else %}
+    <li class="disabled"><span>&raquo;</span></li>
+    {% endif %}
+  </ul>
+  {% endif %}
+</div>
 
-{% if user.is_authenticated %} 
-  <a href = "/accounts/logout">로그아웃</a> 
-  <h2>{{user.username}} 님이 로그인중 </h2><br>
-  <h2>{{user}}</h2>
-{% else %} 
-  <a href = "/accounts/signup">회원가입 /accounts/signup</a><br>
-  <a href = "/accounts/login">로그인 /accounts/login</a><br> 
-  <a href = "/accounts/google/login">구글 로그인 /accounts/google/login</a><br> 
-{% endif %} -->
-
-
-
-
+{% else %}
 <div class="row mt-5">
   <div class="col-12 text-center">
     <h1>로그인</h1>
   </div>
 </div>
 <div class="row mt-5">
-  <div class="col-12">
-    {{ error }}
-  </div>
+  <div class="col-12">{{ error }}</div>
 </div>
 <div class="row mt-5">
-  <div class="col-12">
-    <form method="POST" action=".">
-      {% csrf_token %}
-      
-      {% for field in form %}
-        <div class="form-group">
-          <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-          <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}"
-            placeholder="{{ field.label }}" name="{{ field.name }}" />
-        </div>
-        {% if field.errors %}
-        <span style="color: red">{{ field.errors }}</span>
-        {% endif %}
-      {% endfor %}
-      
-      <button type="submit" class="btn btn-primary">로그인</button>
-      <button type="button" class="btn btn-primary btn-block" onclick="location.href='/user/register'">회원가입</button>
-    </form>
+  <div>
     <button onclick="location.href='/user/login/naver'">
       네이버 로그인 버튼
     </button>
@@ -80,5 +94,6 @@
     </button>
   </div>
 </div>
+{% endif %} 
 
 {% endblock %}
