--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -5,7 +5,13 @@
 
 <h1>{{user.social_login}} 으로 가입한 {{user.email}} 님</h1>
 <button class="btn btn-primary btn-block" onclick="location.href='/user/logout'">로그아웃</button>
-<button class="btn btn-primary btn-block" onclick="location.href='/seller/register'">셀러 등록</button>
+
+{% if seller %}
+  <button class="btn btn-primary btn-block" onclick="location.href='/seller/product'">셀러 페이지</button>
+{% else %}
+  <button class="btn btn-primary btn-block" onclick="location.href='/seller/register'">셀러 등록</button>
+{% endif %}
+
 
 <div class="row mt-5">
   <div class="col-12">
