show thumnail image on product list

--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -13,6 +13,13 @@
 {% endif %}
 
 
+
+
+{% for product in products %}
+  <h3>{{product}}</h3><br>
+{% endfor %}
+
+
 <div class="row mt-5">
   <div class="col-12">
     <table class="table table-light">
