Show product category, subcategory in detail page

--- a/product/templates/product_detail.html
+++ b/product/templates/product_detail.html
@@ -3,15 +3,26 @@
 
 {% block contents %}
 
-{{product}}
-
 <div class="row mt-5">
   <div class="col-12">
     <div class="card" style="width: 100%;">
       <div class="card-body">
-        <h5 class="card-title">{{ product.name }}</h5>
+        <h5 class="card-title">상품명: {{ product.name }}</h5>
+        <h5 class="card-title">카테고리: {{ category.category }}</h5>
+        <h5 class="card-title">상세 카테고리: {{ subcategory.category }}</h5>
       </div>
       <ul class="list-group list-group-flush">
+        <li class="list-group-item">가격: {{ product.price|intcomma }} 원</li>
+        <li class="list-group-item">등록날짜: {{ product.register_date|date:'Y-m-d H:i' }}</li>
+        <li class="list-group-item">재고: {{ product.stock|intcomma }} 개</li>
+        <li class="list-group-item">{{ product.description|safe }}</li> 
+      
+        {% for image in images %}
+          <li class="list-group-item">
+            <img class="fit-picture" src="{{ image.image|safe }}">
+          </li>
+        {% endfor %}
+        
         <li class="list-group-item">
           <form method="POST" action="/order/create/">
             {% csrf_token %}
@@ -19,7 +30,9 @@
             {% for field in form %}
               <div class="form-group">
                 {% ifnotequal field.name 'product' %}
-                  <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                  <label for="{{ field.id_for_label }}">
+                    {{ field.label }}
+                  </label>
                 {% endifnotequal %}
                 <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}"
                   placeholder="{{ field.label }}" name="{{ field.name }}"
@@ -33,18 +46,6 @@
             <button type="submit" class="btn btn-primary">주문하기</button>
           </form>
         </li>
-
-        <li class="list-group-item">가격: {{ product.price|intcomma }} 원</li>
-        <li class="list-group-item">등록날짜: {{ product.register_date|date:'Y-m-d H:i' }}</li>
-        <li class="list-group-item">재고: {{ product.stock|intcomma }} 개</li>
-        <li class="list-group-item">{{ product.description|safe }}</li> 
-      
-        {% for image in images %}
-          <li class="list-group-item">
-            <img class="fit-picture" src="{{ image.image|safe }}">
-          </li>
-        {% endfor %}
-        
         
       </ul>
     </div>
