상품 상세페이지 - 질문/답변 기능 추가

--- a/product/templates/product_detail.html
+++ b/product/templates/product_detail.html
@@ -20,13 +20,12 @@
         <li class="list-group-item">상품설명: {{ product.description|safe }}</li> 
         <li class="list-group-item">셀러: {{ product.seller_id.name |safe }}</li> 
         <li class="list-group-item"><img src="{{product.seller_id.image}}"></li> 
-      
-        {% for image in images %}
-          <li class="list-group-item">
-            <img class="fit-picture" src="{{ image.image|safe }}">
-          </li>
-        {% endfor %}
-        
+        <li class="list-group-item">
+          {% for image in images %}
+          <img class="fit-picture" src="{{ image.image|safe }}">
+          {% endfor %}
+        </li>
+
         <li class="list-group-item">
           <form method="POST" action="/order/create/">
             {% csrf_token %}
@@ -50,11 +49,45 @@
             <button type="submit" class="btn btn-primary">주문하기</button>
           </form>
         </li>
+
+        <li class="list-group-item">
+          <form method="POST" action="/product/qna/">
+            {% csrf_token %}
+            <input type="hidden" name="product_id" value="{{product.id}}">
+            {% for field in question_form %}
+              {{field}}
+            {% endfor %}
+            <button type="submit" class="btn btn-primary">댓글</button> 
+          </form>
+        </li>
+
+        {% for qna in qna_list %}
+        <li class="list-group-item">
+          질문: {{qna.question}}
+        
+          {% if qna.answer %}
+            / 답변: {{qna.answer}}
+          
+          {% else %}
+            <form method="POST" action="/product/qna/">
+              {% csrf_token %}
+              <input type="hidden" name="qna_id" value="{{qna.id}}">
+              {% for field in answer_form %}
+                {{field}}
+              {% endfor %}
+              <button type="submit" class="btn btn-primary">답변</button> 
+            </form>
+          {% endif %}
+
+        </li>
+        {% endfor %}
+
         
       </ul>
     </div>
   </div>
-  <div class="row">
+
+    <div class="row">
     <div class="col-12">
       <a href="/product/">목록보기</a>
     </div>
