--- a/product/templates/product_detail.html
+++ b/product/templates/product_detail.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
 {% load humanize %}
 
+{% block extrahead %}
+<script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=w2no0h42m6"></script>
+{% endblock %}
+
 {% block contents %}
+
+
+
 
 <div class="row mt-5">
   <div class="col-12">
@@ -31,6 +38,9 @@
       </div>
       
       <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          <div id="map" style="width:100%;height:400px;"></div>
+        </li>
         <li class="list-group-item">가격: {{ product.price|intcomma }} 원</li>
         <li class="list-group-item">등록날짜: {{ product.register_date|date:'Y-m-d H:i' }}</li>
         <li class="list-group-item">재고: {{ product.stock|intcomma }} 개</li>
@@ -110,4 +120,16 @@
     </div>
   </div>
 
+  {% endblock %}
+
+
+  {% block extrascript %}
+  <script>
+    var mapOptions = {
+        // center: new naver.maps.LatLng(36.3595704, 127.105399),
+        center: new naver.maps.LatLng("{{coordinate_y}}", "{{coordinate_x}}"),
+        zoom: 18
+    };
+    var map = new naver.maps.Map('map', mapOptions);
+    </script>
   {% endblock %}
